assets/css/styles.css
/*=============== GOOGLE FONTS ===============*/
@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Lora:wght@500;600&family=Poppins:wght@400;500&display=swap");

/*=============== VARIABLES CSS ===============*/
:root {
  --header-height: 3.5rem;

  /*========== Colors ==========*/
  /*Color mode HSL(hue, saturation, lightness)*/
  --first-color: hsl(19, 64%, 54%);
  --first-color-alt: hsl(19, 64%, 52%);
  --title-color: hsl(19, 16%, 15%);
  --text-color: hsl(19, 16%, 35%);
  --text-color-light: hsl(19, 8%, 55%);
  --body-color: hsl(19, 100%, 96%);
  --header-color: hsla(18, 100%, 96%, 0.85);
  --container-color: hsl(19, 100%, 97%);
  --bg-header: #FCEFE6;

  /*========== Font and typography ==========*/
  /*.5rem = 8px | 1rem = 16px ...*/
  --body-font: "Poppins", sans-serif;
  --title-font: "Lora", serif;
  --subtitle-font: "Dancing Script", cursive;
  --biggest-font-size: 2.25rem;
  --h1-font-size: 1.5rem;
  --h2-font-size: 1.25rem;
  --h3-font-size: 1rem;
  --normal-font-size: .938rem;
  --small-font-size: .813rem;
  --smaller-font-size: .75rem;

  /*========== Font weight ==========*/
  --font-medium: 500;
  --font-semi-bold: 600;

  /*========== z index ==========*/
  --z-tooltip: 10;
  --z-fixed: 100;
}
@media screen and (min-width: 1024px) {
  :root {
    --biggest-font-size: 4rem;
    --h1-font-size: 2.25rem;
    --h2-font-size: 1.5rem;
    --h3-font-size: 1.25rem;
    --normal-font-size: 1rem;
    --small-font-size: .875rem;
    --smaller-font-size: .813rem;
  }
}

/*=============== BASE ===============*/
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: var(--body-font);
  font-size: var(--normal-font-size);
  background-color: var(--body-color);
  color: var(--text-color);
  transition: background 0.4s; /* for dark mode animation */
}

h1, h2, h3 {
  color: var(--title-color);
  font-weight: var(--font-medium);
  font-family: var(--title-font);
}

ul {
  list-style: none;
}

a {
  text-decoration: none;
}
a:hover {
  color: var(--first-color-alt);
}
a:active{
  color: var(--first-color);
}

img {
  max-width: 100%;
  height: auto;
}

p{
  font-size: var(--normal-font-size);
  color: var(--text-color);
}

button i{
  transition: transform .3s;
}
button:hover i{
  transform: translateX(.25rem);
}

.subtitle{
  font-family: var(--subtitle-font);
  font-size: var(--h1-font-size);
  color: var(--first-color);
}

.logo{
  width: 30px;
  height: auto;
}
.logo-title{
  font-size: var(--h3-font-size);
  font-family: var(--title-font);
  font-weight: var(--font-semi-bold);
  transition: color .3s;
}

/* NAV STYLE */
#header nav{
  background-color: var(--header-color);
  z-index: 200;
  backdrop-filter: blur(10px);
}

#nav-menu{
  z-index: 100;
  top: -17rem;
  background-color: var(--bg-header);
  transition: ease-in 400ms;
}
#nav-menu img{
  position: absolute;
  left: -30px;
  top: 15px;
  width: 30%;
  height: auto;
  opacity: .2;
  transform: rotate(180deg) scale(1.2);
}

/* HOME STYLE  */
#home{
  position: relative;
  height: 100vh;
  overflow: hidden;
}
#home img{
  width: 300px;
}
#home .leaf-1,.leaf-2{
  position: absolute;
  opacity: .2;
}
#home .leaf-1{
  width: 80px;
  top: 8rem;
  left: -1rem;
  transform: rotate(90deg);
}
#home .leaf-2{
  width: 100px;
  right: -2rem;
  bottom: 1rem;
  transform: rotate(-15deg);
}
#home h1{
  font-size: var(--biggest-font-size);
  font-family: var(--title-font);
}
#home h1 img{
  width: 40px;
}
#home button{
  background-color: var(--first-color);
}
#home button i{
  font-size: 1.5rem;
}
#home button:hover{
  background-color: var(--first-color-alt);
}

/* ABOUT STYLE */
#about {
  position: relative;
  overflow: hidden;
}
#about img {
  width: 300px;
}
#about h1 img {
  width: 40px;
}
#about h1 {
  font-family: var(--title-font);
  font-size: var(--biggest-font-size);
}
#about .leaf-1{
  position: absolute;
  width: 100px;
  opacity: .2;
  right: -10px;
  bottom: 25%;
  transform: rotate(-30deg);
}


/* POPULAR */
#popular h2{
  font-size: var(--h3-font-size);
  font-family: var(--title-font);
}
.menu-container{
  background-color: var(--container-color);
  position: relative;
  overflow: visible;
}
.menu-container p{
  font-size: var(--smaller-font-size);
  margin-bottom: 1rem;
}
.menu-container .price{
  font-size: var(--h3-font-size);
  font-weight: var(--font-medium);
  color: var(--first-color);
}
.menu-img{
  position: absolute;
  inset: 0;
  z-index: 10;
  top: -2.5rem;
  width: 220px;
  margin: 0 auto;
  transition: transform .4s;
}
.menu-button{
  background-color: var(--first-color);
  color: whitesmoke;
  transition: background .3s;
  cursor: pointer;
}
.menu-button:hover{
  background-color: var(--first-color-alt);
}
.menu-container:hover .menu-img{
  transform: translateY(-.25rem);
}

/* Recently */
#recently {
  position: relative;
  overflow-x: hidden;
}
#recently .spinach-1{
  width: 1.25rem;
  position: absolute;
  top: 5rem;
  right: 1rem;
  transform: rotate(15deg);
  z-index: -1;
}
#recently .leaf-1, .leaf-2{ 
  position: absolute;
  opacity: .2;
}
#recently .leaf-1{
  width: 80px;
  top: 7rem;
  left: -1rem;
  transform: rotate(15deg);
}
#recently .leaf-2{
  width: 40px;
  bottom: 12rem;
  right: -1rem;
  transform: rotate(-30deg);
}
#recently h2{
  font-size: var(--h1-font-size);
  font-family: var(--title-font);
}
#recently button{
  background-color: var(--first-color);
}
#recently button:hover{
  background-color: var(--first-color-alt);
}
#recently button i{
  font-size: 1.5rem;
}
#recently img{
  width: 220px;
}

/* Newsletter  */
#newsletter {
  position: relative;
}
#newletter h2{
  font-size: var(--h1-font-size);
  font-family: var(--title-font);
}
#newsletter .newsletter-container{
  position: relative;
  background-color: var(--title-color);
  color: var(--text-color-light);
  overflow: hidden;
}
#newsletter .img-newsletter{
  position: absolute;
  top: -50px;
  left: -140px;
  width: 220px;
}
#newsletter button{
  background-color: var(--first-color);
  cursor: pointer;
}
#newsletter .spinach-1{
  position: absolute;
  width: 20px;
  bottom: -1rem;
  right: 1rem;
  z-index: 10;
  transform: rotate(45deg);
}

/* FOOTER STYLE  */
.footer{
  overflow-x: hidden;
}
.footer .social-link{
  color: var(--first-color);
  transition: color .3s, transform .3s;
}
.footer .social-link:hover{
  transform: translateY(-2px);
  color: var(--first-color-alt);
}
.footer .spinach-leaf, .spring-onion{
  width: 30px;
  position: absolute;
}
.footer .spring-onion{
  top: 6.5rem;
  right: 2.5rem;
  transform: rotate(-45deg);
}
.footer .spinach-leaf{
  bottom: 8rem;
  left: 3rem;
  transform: rotate(30deg);
}
.footer .leaf-branch{
  position: absolute;
  width: 100px;
  opacity: .2;
  bottom: 6rem;
  right: -2rem;
  transform: rotate(-15deg);  
}
.footer .payment{
  width: 35px;
}

/* Scroll bar  */
::-webkit-scrollbar{
  width: .5rem;
  border-radius: .5rem;
  background-color: hsl(19, 8%, 75%);
}
::-webkit-scrollbar-thumb{
  border-radius: .4rem;
  background-color: hsl(19, 8%, 65%);
}
::-webkit-scrollbar-thumb:hover{
  border-radius: .4rem;
  background-color: hsl(19, 8%, 50%);
}

/* Scroll UP  */
.scroll-up{
  display: block;
  bottom: -5rem;
  background-color: var(--container-color);
  color: var(--first-color);
  transition: all .3s;
}
.scroll-up:hover{
  color: var(--first-color-alt);
  transform: translateY(-.25rem);
}

/* RESPONSIVE DESIGN MD */
@media screen and (min-width: 768px) {
  #home img{
    width: 400px;
  }
  #home h1 img{
    width: 70px;
  }

  #about h1 img {
    width: 70px;
  }
  #about img {
    width: 400px;
  }

  .menu-img{
    top: -1.5rem;
  }
  
  #recently img{
    width: 380px;
  }
  #recently .spinach-1{
    width: 25px;
  }

  #newsletter .img-newsletter{
    position: inherit;
    top: auto;
    left: auto;
    width: 240px;
  }

  .footer .spring-onion{
    right: 8rem;
  }
  .footer .spinach-leaf{
    bottom: 8rem;
  }
}

/* RESPONSIVE DESIGN LG */
@media screen and (min-width: 1024px) {
  #home img{
    width: 640px;
  }
  #home h1 img{
    width: 70px;
  }
  #about h1 img {
    width: 70px;
  }
  #about img {
    width: 480px;
  }

  .menu-img{
    top: -2.5rem;
  }

  #recently img{
    width: 440px;
  }
  #recently .spinach-1{
    right: -15%;
    width: 30px;
  }

  #newsletter .img-newsletter{
    position: inherit;
    top: auto;
    left: auto;
    width: 320px;
  }

  .footer .spring-onion{
    right: 12rem;
  }
  .footer .spinach-leaf{
    left: 8rem;
    bottom: 4rem;
  }
}

